hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tany.php.exp
File "tany.php", line 4, characters 10-10:
Was expecting a return type hint (Typing[4030])
