hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tany.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function f(~int $x) /* TAny */ {
  return $x; // ok
}
